# FastAndFuriousServerC

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
FastAndFuriousClient/: CMakeLists.txt  main.c
FastAndFuriousClient/Include/: faf_client.h
FastAndFuriousServer/: CMakeLists.txt  main.c
FastAndFuriousServer/Include/: FastAndFuriousServer.h  faf_server.h
FastAndFuriousServer/Source/: main.c
